--- a/index.html
+++ b/index.html
@@ -133,6 +133,23 @@
 
 
 
+<section class="cta">
+  <div class="container">
+  
+    <div class="cta__info">
+    <div class="cta__title">Track your crytpo portfolio on the best way Possible </div>
+    <a class="cta__btn btn" href="">Check It Out</a>
+  </div>
+</div>
+</section>
+
+
+
+
+
+
+
+
 
 
 
